Updated the renewal grid so you can update the renewal date from the dashboard.

--- a/KetoSavageWeb/KetoSavageWeb/Views/ClientCharts/_clientProgramGrid.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/ClientCharts/_clientProgramGrid.cshtml
@@ -12,6 +12,10 @@
                 .UpdateAction("UpdateSingleDay")
                 .Key("Date")
             )
+            .Export(e => e
+                .Enabled(true)
+                .FileName("ProgramProgress")
+                .AllowExportSelectedData(false))
             .ShowBorders(true)
             .RowAlternationEnabled(true)
             .FocusedRowEnabled(true)
