--- a/KetoSavageWeb/KetoSavageWeb/Views/Shared/_rootLayout.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Shared/_rootLayout.cshtml
@@ -12,6 +12,8 @@
     @Styles.Render("~/Content/DevExtremeBundle")
 
 
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.5/jszip.min.js"></script>
+
     @Scripts.Render("~/Scripts/bundle")
     @Scripts.Render("~/Scripts/DevExtremeBundle")
 
