--- a/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/_dxUserGridViewPartial.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/_dxUserGridViewPartial.cshtml
@@ -152,6 +152,7 @@
     function onRowUpdating(e) {
 
         e.newData["UserName"] = e.oldData["UserName"];
+        e.newData["IsActive"] = e.oldData["IsActive"];
         
     }
 
