Updated renewal grid & commented out some unused resources.

--- a/KetoSavageWeb/KetoSavageWeb/Views/CoachCharts/_clientRenewalGrid.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/CoachCharts/_clientRenewalGrid.cshtml
@@ -28,6 +28,11 @@
                     .DataField("RenewalDate")
                     .DataType(GridColumnDataType.Date)
                     .SortOrder(SortOrder.Asc);
+                c.Add()
+                    .DataField("EndDate")
+                    .Caption("End Date")
+                    .DataType(GridColumnDataType.Date)
+                    .AllowEditing(false);
             })
             .OnCellPrepared("colorDates")
             .DataSource(d => d.WebApi()
