--- a/KetoSavageWeb/KetoSavageWeb/Views/CoachDashboard/Index.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/CoachDashboard/Index.cshtml
@@ -8,23 +8,23 @@
 </div>
 
 <div class="row">
-    <div class="col-sm-12 col-md-6 col-lg-3">
+    <div class="col-sm-12 col-md-3">
         @Html.Action("ClientRenewalGrid", "CoachCharts")
     </div>
-    <div class="col-sm-12 col-md-6 col-lg-9">
+    <div class="col-sm-12 col-md-9">
         <div class="row">
-            <div class="col-sm-12 col-md-6 col-lg-4">
+            <div>
                 @Html.Action("TopPerformers", "CoachCharts")
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
+            <div>
                 @Html.Action("BottomPerformers", "CoachCharts")
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-12 col-md-6 col-lg-4">
+            <div>
                 @Html.Action("TopPerformersLifetime", "CoachCharts")
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
+            <div>
                 @Html.Action("BottomPerformersLifetime", "CoachCharts")
             </div>
 
