--- a/KetoSavageWeb/KetoSavageWeb/Views/ManageNews/Index.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/ManageNews/Index.cshtml
@@ -1,12 +1,4 @@
 ﻿
 <div id="newsGrid">
-    @Html.DevExpress().Panel(settings =>
-    {
-        settings.Name = "pnlNewsGrid";
-        settings.SetContent(() =>
-        {
-            Html.RenderAction("NewsGridPartial");
-        });
-
-    }).GetHtml()
+    @Html.Action("NewsGridPartial")
 </div>
