--- a/KetoSavageWeb/KetoSavageWeb/Views/Manage/SetPassword.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-@{ Layout = "~/Views/Shared/_lightLayout.cshtml"; }
+@*@{ Layout = "~/Views/Shared/_lightLayout.cshtml"; }
 
 @model KetoSavageWeb.Models.SetPasswordViewModel
 @{
@@ -32,4 +32,4 @@
         s.Text = "Set password";
         s.UseSubmitBehavior = true;
     }).GetHtml()
-}
+}*@
