--- a/KetoSavageWeb/KetoSavageWeb/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-@{ Layout = "~/Views/Shared/_lightLayout.cshtml"; }
+@*@{ Layout = "~/Views/Shared/_lightLayout.cshtml"; }
 
  
  
@@ -24,4 +24,4 @@
         s.Name = s.Text = "Submit";
         s.UseSubmitBehavior = true;
     }).GetHtml() 
-}
+}*@
