--- a/KetoSavageWeb/KetoSavageWeb/Views/Manage/AddPhoneNumber.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-@{ Layout = "~/Views/Shared/_lightLayout.cshtml"; }
+@*@{ Layout = "~/Views/Shared/_lightLayout.cshtml"; }
 
  
  
@@ -23,4 +23,4 @@
         s.Name = s.Text = "Submit";
         s.UseSubmitBehavior = true;
     }).GetHtml() 
-}
+}*@
