Updated client chart

--- a/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/UserProgramDetails.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/UserProgramDetails.cshtml
@@ -86,7 +86,7 @@
 </div>
 <div class="row">
     <div class="col-sm-12">
-        @Html.Action("ClientWeightGraph", "ClientCharts", new { userId = Session["UserId"] })
+        @Html.Action("ClientCombinedGraph", "ClientCharts", new { userId = Session["UserId"] })
     </div>
 </div>
 <div class="row">
