--- a/KetoSavageWeb/KetoSavageWeb/Views/UserProgress/Index.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/UserProgress/Index.cshtml
@@ -30,7 +30,8 @@
 </div>
 <div class="row">
     <div class="col-sm-12">
-        @Html.Action("ClientWeightGraph", "ClientCharts", new { userId = Session["UserId"] })
+        @*@Html.Action("ClientWeightGraph", "ClientCharts", new { userId = Session["UserId"] })*@
+        @Html.Action("ClientCombinedGraph", "ClientCharts", new { userId = Session["UserId"] })
     </div>
 </div>
 <div class="row">
